blurred bubble/background-bubble.css
#blur{
    height: 100%;
    width: 100%;
    position: absolute;
    z-index: -1;
    backdrop-filter: blur(200px);
}
#bubble{
    height: 300px;
    left: 50%;
    top: 20%;
    translate: -50% -50%;
    aspect-ratio: 1;
    border-radius: 50%;

    position: absolute;
    z-index: -2;
    
    background: linear-gradient(
        to right,
        #86C8BC,
        #83B7D4,
        #BA90C6
    );
    animation: rotation 20s infinite; 
}
@keyframes rotation{
    from{
        transform: rotate(0deg);
    }
    10%{
        scale: 1 1.5;
    }
    to{
        transform: rotate(360deg);
    }
}

